...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zlc-AD-xxL" userLabel="HeaderView">
                                <rect key="frame" x="0.0" y="20" width="320" height="50"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1qZ-Uq-S4F" userLabel="Settings">
                                        <rect key="frame" x="210" y="0.0" width="50" height="50"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" image="gearshape.fill" catalog="system">
                                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="20"/>
                                            <color key="baseForegroundColor" name="IconColorSet"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="settingsButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i1k-AU-nMN"/>
                                        </connections>
...
                            <constraint firstItem="qwO-9F-SQr" firstAttribute="top" secondItem="F01-Kj-fR2" secondAttribute="bottom" priority="999" constant="20" id="u3h-16-eAo"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="F01-Kj-fR2" secondAttribute="trailing" constant="40" id="ual-lK-Fpz"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="qwV-Hk-FOX">
                        <rightBarButtonItems>
                            <barButtonItem systemItem="add" id="mqN-VI-qai">
                                <color key="tintColor" red="0.33221882580000001" green="0.52216243740000001" blue="0.77569359540000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </barButtonItem>
                            <barButtonItem title="Item" image="gearshape" catalog="system" id="ydc-zW-7wM">
                                <color key="tintColor" red="0.33221882580000001" green="0.52216243740000001" blue="0.77569359540000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </barButtonItem>
                        </rightBarButtonItems>
...
